duplicate guesses no longer add to the score, user is notified when they've already guessed a word. New game button now effectively starts a new game (href leads to homepage). Reset statistics button resets the num of times played and high score. Added tests, but need to add more for view functions and add tests for boggle.py

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,8 @@
     <!-- Future functionality -->
     <div class="options">
         <ul>
-            <li><a href="#" id="reset-stats">Reset Statistics</a></li>
-            <li><a href="#" id="new-game">New Game</a></li>
+            <li><a href="/reset-stats" id="reset-stats">Reset Statistics</a></li>
+            <li><a href="/" id="new-game">New Game</a></li>
         </ul>
     </div>
 <table>
@@ -37,8 +37,7 @@
     
 </form>
 <div class="container">
-    <span>Result:</span>
-    <span class="result"></span>
+    <p>Result: <span class="result"></span></p>
 </div>
 
 </div>
