--- a/static/app.css
+++ b/static/app.css
@@ -1,29 +1,97 @@
+* {
+    font-family: 'Caveat', cursive;
+    /* font-family: 'Roboto Slab', serif; */
+}
+
+h1 {
+    font-size: 5em;
+    margin: auto;
+    color: black;
+}
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url('https://images.pexels.com/photos/5138888/pexels-photo-5138888.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
 }
 
+.options {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 20%;
+    margin-right: 20%;
+    gap: 10%;
+}
+.option-btn {
+    background-color: slategray;
+    color: white;
+    padding: 15px 10px;
+    min-width: 100px;
+    text-align: center;
+    text-decoration: none;
+    border: 1px solid black;
+    border-radius: 10px;
+  }
+
 table, tr, td {
-    flex-grow: 1;
     aspect-ratio: 1/1;
     border: 1px solid black;
     border-collapse: collapse;
     text-align: center;
     font-size: 1em;
+    background-color: whitesmoke;
+  }
+  table {
+    margin: 1em 10%;
   }
 
 div.game-board {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-    width: 500px;
-    height: auto;   
+    background-image: url('https://images.pexels.com/photos/518245/pexels-photo-518245.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+    border-radius: .5em;
+    max-width: 70vw;
+    min-width: 50vw;
+    height: 80vh;   
     /* delete later */
     border: 1px solid black; 
+}
+.container {
+    display: flex;
+    justify-content: space-between;
+    margin: 1em;
+    margin-top: .5em;
+    font-size: 1.5rem;
+}
+
+p, #boggle-form {
+    background-color: white;
+    padding: 2px 10px;
+    border: 5px dotted brown;
+    border-radius: 1rem;
+}
+
+#scores, #stats {
+    display: flex;
+    flex-direction: column;
+}
+
+#scores {
+    align-items: end;
+    padding: none;
+}
+
+#stats {
+    align-items: start;
+    padding: none;
 }
 
 form {
     margin-top: 1rem;
+}
+
+#boggle-form {
+    margin-left: 1rem;
+    width: 240px;
 }
