--- a/templates/home.html
+++ b/templates/home.html
@@ -6,39 +6,43 @@
 
 <div class="game-board">
     <div class="container">
-        <p>Number of times played: {{ session['num_played'] }}</p>
-        <p>Remaining Time: <span id="timer"></span></p>
-        <p>High Score: <span id="hi-score">{{ session.get('curr-hi-score', 0) }}</span></p>
-        <p>Score: <span id="score">0</span></p>
-    </div>
-
-    <!-- Future functionality -->
-    <div class="options">
-        <ul>
-            <li><a href="/reset-stats" id="reset-stats">Reset Statistics</a></li>
-            <li><a href="/" id="new-game">New Game</a></li>
-        </ul>
-    </div>
-<table>
-    {% for row in session['board'] %}
-    <tr>
-        {% for col in row %}
-        <td>{{ col }}</td>
-        {% endfor %}
-    </tr>
+        <div id="stats">
+            <p>Number of times played: {{ session['num_played'] }}</p>
+            <p>Remaining Time: <span id="timer"></span></p>
+        </div>
+        <div id="scores">
+            <p>High Score: <span id="hi-score">{{ session.get('curr-hi-score', 0) }}</span></p>
+            <p>Score: <span id="score">0</span></p>
+        </div>
         
-    {% endfor %}
-</table>
+    </div>
 
-<form id="boggle-form" method="post">
-    <label for="word">Check Word!</label>
-    <input type="text" name="word" id="word" autocomplete="off" placeholder="word"> 
-    <button type="submit">Submit</button>
-    
-</form>
-<div class="container">
-    <p>Result: <span class="result"></span></p>
-</div>
+    <div class="options">
+        <a href="/reset-stats" id="reset-stats" class="option-btn">Reset Statistics</a>
+        <a href="/" id="new-game" class="option-btn">New Game</a>
+    </div>
+    <table>
+        {% for row in session['board'] %}
+        <tr>
+            {% for col in row %}
+            <td>{{ col }}</td>
+            {% endfor %}
+        </tr>
+            
+        {% endfor %}
+    </table>
+
+    <form id="boggle-form" method="post">
+        <label for="word"><b>Check Word:</b></label>
+        <input type="text" name="word" id="word" autocomplete="off" placeholder="word"> 
+        <button type="submit">Submit</button>
+        
+    </form>
+    <div class="container">
+        <p>Result: <span class="result"></span></p>
+    </div>
+
+    <!-- Add list of guessed words -->
 
 </div>
 {% endblock %}
