--- a/static/app.css
+++ b/static/app.css
@@ -68,6 +68,7 @@ div.game-board {
 p, #boggle-form {
     background-color: white;
     padding: 2px 10px;
+    margin-top: 0px;
     border: 5px dotted brown;
     border-radius: 1rem;
 }
